# stm32f429-rust-embassy

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  workspace-plan.md
.cargo/: config.toml
ext/: Makefile  stm32f4xx_hal_conf.h
ext/src/: ws28xx.c
firmware/: Cargo.toml  build.rs
firmware/ext/: Makefile
firmware/ext/src/: ws28xx.c  ws28xx.h
firmware/src/: channel.rs  ffi.rs  init.rs  main.rs  rgb.rs
firmware/src/driver/: channel.rs  ffi.rs  mod.rs
led-effects/: Cargo.toml
led-effects-macros/: Cargo.toml
led-effects-macros/src/: lib.rs
led-effects/src/: lib.rs  rgb.rs
led-effects/src/effects/: envelope.rs  generator.rs  hue.rs  mod.rs  modifier.rs
led-effects/src/effects/composition/: builder.rs  mod.rs  with_modifier.rs
led-effects/src/effects/core/: mod.rs  pixel.rs  traits.rs
led-effects/src/effects/envelopes/: combinator.rs  combinators.rs  ease.rs  easing.rs  misc.rs  mod.rs  timing.rs  utilities.rs
led-effects/src/effects/generators/: complex.rs  mod.rs  movement.rs  static_patterns.rs
led-effects/src/effects/hue/: mod.rs  oscillate.rs  rotating_hue.rs  static_hue.rs
led-effects/src/effects/modifiers/: color.rs  effects.rs  mod.rs  spatial.rs  temporal.rs
led-effects/src/effects/parameters/: dynamic_param.rs  mod.rs  static_param.rs
src/: channel.rs  ffi.rs  main.rs  rgb.rs
src/effects/: builder.rs  ease.rs  envelope.rs  mod.rs  modifier.rs  parameter.rs
