[package]
name = "led-effects"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A no_std library for creating sophisticated LED lighting effects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/led-effects"

[dependencies]
libm = "0.2.15"

[features]
default = []
std = []
